@@ -1,0 +1,44 @@
+/* gcompris - gcompris_im.h
+ *
+ * Time-stamp: <2005/09/15 14:19:33 yves>
+ *
+ * Copyright (C) 2005 Bruno Coudoin
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+
+/*****************************************************************************/
+/* this files gives access to im_context for gcompris_board.                 */
+/*****************************************************************************/
+
+#ifndef GCOMPRIS_IM_H
+#define GCOMPRIS_IM_H
+
+void *gcompris_im_init();
+
+void *gcompris_board_change_context();
+
+void *gcompris_im_reset();
+
+#endif
+
+
+/* Local Variables: */
+/* mode:c */
+/* eval:(load-library "time-stamp") */
+/* eval:(make-local-variable 'write-file-hooks) */
+/* eval:(add-hook 'write-file-hooks 'time-stamp) */
+/* eval:(setq time-stamp-format '(time-stamp-yyyy/mm/dd time-stamp-hh:mm:ss user-login-name)) */
+/* End: */
